--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,18 @@
 body {
     background-color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
+.topnav {
+    padding: 0px 120px 0px 120px;
+}
+
+main {
+    margin: auto;
+    width: 80%;
+}
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: #333;
